# GodotOnCmake

./: CMakeLists.txt  Godot.cmake  GodotGenerators.cmake  LICENSE  LinuxPlatform.cmake  LinuxPlatformDetection.cmake  README.md  WindowsPlatform.cmake  glsl_builders.py
cmake/modules/: FindDBUS.cmake
core/: CMakeLists.txt
drivers/: CMakeLists.txt
drivers/alsa/: CMakeLists.txt
drivers/alsamidi/: CMakeLists.txt
drivers/gl_context/: CMakeLists.txt
drivers/gles3/: CMakeLists.txt
drivers/png/: CMakeLists.txt
drivers/pulseaudio/: CMakeLists.txt
drivers/unix/: CMakeLists.txt
drivers/vulkan/: CMakeLists.txt
drivers/wasapi/: CMakeLists.txt
drivers/windows/: CMakeLists.txt
drivers/winmidi/: CMakeLists.txt
editor/: CMakeLists.txt
main/: CMakeLists.txt
modules/: CMakeLists.txt
modules/gltf/: CMakeLists.txt
modules/openxr/: CMakeLists.txt
modules/text-server-adv/: CMakeLists.txt
platform/: CMakeLists.txt
platform/linux/: CMakeLists.txt
platform/windows/: CMakeLists.txt
scene/: CMakeLists.txt
servers/: CMakeLists.txt
tools/: GodotToolsFrontend.py
